# fanforge

./: .env.example  .gitignore  CLAUDE.md  GOAL.md  README.md  handoff.md
bot/: package-lock.json  package.json
bot/src/: index.ts  session.ts
bot/src/handlers/: start.ts
docs/: DEMO.md  TEST_GUIDE.md  test-and-demo-guide.md  user-guide.md
plugin/: Cargo.toml  aomi.toml
plugin/src/: client.rs  lib.rs  tool.rs
