[package]
name = "fanforge"
version = "0.1.0"
edition = "2024"
description = "FanForge — Aomi plugin for creator fan economies on Zora"

[lib]
crate-type = ["cdylib"]

[dependencies]
aomi-sdk   = { git = "https://github.com/aomi-labs/aomi-sdk" }
reqwest    = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
schemars   = "1.0.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["rt-multi-thread", "macros"] }
